--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,7 +9,10 @@
   <nav>
       <img class="nav-brand" src="/images/coffee-svgrepo-com.svg" alt="coffee logo">
       <h1>CoffeeDB</h1>
-      <input class="search-bar-nav" type="text">
+     <form action="/search" method="get">
+        <input class="search-bar-nav" type="text" name="searchQuery">
+        <button type="submit"><img class="google-icon" src="/images/search-button-svgrepo-com.svg" alt=""></button>
+     </form>
       <a href="/coffee" class="nav-link">Browse</a>
       <a href="/coffee/new" class="nav-link">Add a Roast</a>
       <a href="/auth/google">Login<img class="google-icon" src='/images/google-svgrepo-com.svg'></a>
