--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,16 +1,307 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+:root {
+  --main-black: #0D090A;
+  --main-brown: #3B0D10;
+  --main-white: #F3F3F4;
+  --secondary-blue: #296EB4;
+  --secondary-orange: #FF9505;
 }
+
+*{
+  box-sizing: border-box;
+}
+
+html, body{
+  padding: 0;
+  margin: 0;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+}
+body {
+  /* padding: 50px; */
+  font: 14px 'Lato', arial, sans-serif;
+  background-color: var(--main-black);
+  color: var(--main-white);
+}
+
+/* nav  */
+
+.nav-wrapper{
+  padding: 0 50px 0 50px;
+}
+
+.nav-bar{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.nav-search-wrapper{
+  display: flex;
+  grid-column: 1;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+input, .search-btn{
+  background-color: var(--main-white);
+  border: none;
+  border-radius: 5px;
+  opacity: 80%;
+  color: var(--main-black);
+  vertical-align: middle;
+}
+
+.search-btn{
+  height: 30px;
+}
+
+.search-btn:hover{
+  opacity: 100%;
+}
+
+.search-bar-nav{
+  height: 30px;
+}
+
+
+.nav-menu-wrapper{
+  display: flex;
+  grid-column: 2;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.navbar{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav-menu{
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  justify-self: flex-end;
+  gap: 63px;
+  padding-left: 0;
+}
+
+.burger{
+  display: none;
+  cursor: pointer;
+}
+
+.bar{
+  display: block;
+  width: 25px;
+  height: 3px;
+  margin: 5px auto;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  background-color: var(--main-white);
+}
+
+.nav-link{
+  color: var(--main-white);
+  text-decoration: none;
+  opacity: 80%;
+}
+.nav-link:hover, .coffee-link:hover{
+  opacity: 100%;
+}
+
+
+
+
+/* landing page */
+
+
+.main-heading{
+  font-family: 'Raleway', arial, sans-serif;
+  font-size: 13vmin;
+margin: 13vh 2vw 0 2vw;
+}
+
+.logo-badge{
+  display: grid;
+  align-self: center;
+  grid-template-columns: 23vmin 14vmin 23vmin;
+  align-items: center;
+  justify-items: center;
+}
+
+.badge-hr-l, .badge-hr-r{
+  grid-column: 1;
+  justify-self: center;
+  align-self: center;
+  height: 2px;
+  width: 100%;
+  border: none;
+  border-bottom: solid 2px var(--main-white);
+}
+
+.landing-brand{
+  height: 12vmin;
+  grid-column: 2;
+}
+
+.badge-hr-r{
+  grid-column: 3;
+}
+.landing-wrapper{
+  width: 40%;
+  min-width: fit-content;
+  margin: 0 auto;
+  height: fit-content;
+}
+.landing-panel{
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+  width: 100%;
+  height: 100%;
+  min-height: fit-content;
+  min-width: fit-content;
+  margin: -60px auto 0 auto;
+  background-color: var(--main-brown);
+  padding: 30px;
+  border-radius: 1.2rem;
+}
+
+.landing-links-container{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center;
+  justify-content: space-between;
+  margin: 23px auto;
+  width: 100%;
+  gap: 23px;
+}
+
+.landing-btns-l, .landing-btns-r{
+  display: flex;
+  align-self: center;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+  background-color: var(--secondary-blue);
+  border-radius: 0.6rem;
+  opacity: 80%;
+  color: var(--main-white);
+  font-size:1rem;
+  text-decoration: none;
+  padding: 0 5px;
+}
+
+.landing-btns-l{
+  justify-self: flex-start;
+}
+.landing-btns-r{
+  justify-self: flex-end;
+}
+
+.landing-btns-l:hover, .landing-btns-r:hover{
+  opacity: 100%;
+}
+
+.google-icon{
+  height: 17px;
+  margin: 0 3px -2px;
+  align-self: center;
+}
+
+@media(max-height: 490px){
+ 
+  .main-heading{
+    font-size: 3rem;
+    margin-top: 12%;
+  }
+  .logo-badge{
+    margin-bottom: 5vh;
+  }
+}
+
+ul{
+  list-style: none;
+}
+
+
 
 .nav-brand{
   height: 3vh;
 }
 
-.google-icon{
-  height: 2vmin;
-}
 
 .hidden{
   display: none;
+}
+
+.coffee-link{
+  color: var(--main-white);
+}
+
+@media (max-width: 770px){
+   
+  .landing-links-container{
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 15px;
+  }
+
+  .landing-btns-l, .landing-btns-r{
+    justify-self: center;
+    height: 100%;
+  }
+
+   .burger{
+    display: block;
+    grid-column: 2;
+    justify-self: flex-end;
+    align-self: center;
+   }
+   .burger.active .bar:nth-child(2){
+    opacity: 0;
+   }
+   .burger.active .bar:nth-child(1){
+    transform: translateY(8px) rotate(45deg);
+   }
+   .burger.active .bar:nth-child(3){
+    transform: translateY(-8px) rotate(-45deg);
+   }
+   .nav-menu, .nav-menu-wrapper{
+    position: fixed;
+    left: -100%;
+    top: 70px;
+    gap: 0;
+    flex-direction: column;
+    background-color: var(--main-black);
+    width: 100%;
+    text-align: center;
+    transition: 0.2s;
+   }
+   .nav-item{
+      margin: 10px 0;
+   }
+
+   .nav-menu.active{
+    left: 0;
+   }
+
+
+}
+
+@media (max-width: 770px) and (max-height: 490px){
+
+  .landing-btns-l, .landing-btns-r{
+    justify-self: center;
+    height: 30px;
+    font-size: 0.9rem;
+  }
+
+  .main-heading{
+    margin-top: 20%;
+  }
 }
